fix post card spacing

--- a/src/sass/global/blogs.sass
+++ b/src/sass/global/blogs.sass
@@ -21,12 +21,12 @@
             display: flex
             flex-direction: column
             justify-content: space-between
+            height: 280px
 
             .blogs-box-top
                 .blogs-title
                     color: $cBlack
                     margin-bottom: .5rem
-
 
                 .blogs-date
                     display: block
@@ -38,15 +38,13 @@
                     width: max-content
                     background: $cBlue50
 
-            .blogs-subheader
-                background: #eee
-                margin: 1rem 0 0 0
-                text-overflow: ellipsis
+                .blogs-subheader
+                    margin-top: 1rem
 
-                p 
-                    line-height: 1.4rem
-                    font-size: 1rem
-                    display: -webkit-box
-                    -webkit-box-orient: vertical
-                    -webkit-line-clamp: 4
-                    overflow: hidden
+                    p 
+                        line-height: 1.4rem
+                        font-size: 1rem
+                        display: -webkit-box
+                        -webkit-box-orient: vertical
+                        -webkit-line-clamp: 4
+                        overflow: hidden
